fix mystery space at body bottom, fix horizontal scrolling on body, hide image in introBox if not defined

--- a/src/components/Image/_image.scss
+++ b/src/components/Image/_image.scss
@@ -1,6 +1,7 @@
 .image {
   height: 100%;
   left: 0;
+  overflow: hidden;
   position: absolute;
   top: 0;
   width: 100%;
